Issue 1985: Fix flexbox on Safari 9+.

--- a/core/modules/layout/css/grid-flexbox.css
+++ b/core/modules/layout/css/grid-flexbox.css
@@ -211,7 +211,7 @@
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 25%;
   -ms-flex: 0 0 25%;
-  flex: 0 0 25%;
+  flex: 0 0 24.9%;
   max-width: 25%;
 }
 
@@ -219,7 +219,7 @@
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 33.333333%;
   -ms-flex: 0 0 33.333333%;
-  flex: 0 0 33.333333%;
+  flex: 0 0 33.2%;
   max-width: 33.333333%;
 }
 
@@ -235,7 +235,7 @@
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 50%;
   -ms-flex: 0 0 50%;
-  flex: 0 0 50%;
+  flex: 0 0 49.9%;
   max-width: 50%;
 }
 
@@ -259,7 +259,7 @@
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 75%;
   -ms-flex: 0 0 75%;
-  flex: 0 0 75%;
+  flex: 0 0 74.9%;
   max-width: 75%;
 }
 
@@ -464,7 +464,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
+    flex: 0 0 24.9%;
     max-width: 25%;
   }
 
@@ -472,7 +472,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 33.333333%;
     -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
+    flex: 0 0 33.2%;
     max-width: 33.333333%;
   }
 
@@ -488,7 +488,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
+    flex: 0 0 49.9%;
     max-width: 50%;
   }
 
@@ -512,7 +512,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
-    flex: 0 0 75%;
+    flex: 0 0 74.9%;
     max-width: 75%;
   }
 
@@ -718,7 +718,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
+    flex: 0 0 24.9%;
     max-width: 25%;
   }
 
@@ -726,7 +726,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 33.333333%;
     -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
+    flex: 0 0 33.2%;
     max-width: 33.333333%;
   }
 
@@ -742,7 +742,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
+    flex: 0 0 49.9%;
     max-width: 50%;
   }
 
@@ -766,7 +766,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
-    flex: 0 0 75%;
+    flex: 0 0 74.9%;
     max-width: 75%;
   }
 
@@ -972,7 +972,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
+    flex: 0 0 24.9%;
     max-width: 25%;
   }
 
@@ -980,7 +980,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 33.333333%;
     -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
+    flex: 0 0 33.2%;
     max-width: 33.333333%;
   }
 
@@ -996,7 +996,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
+    flex: 0 0 49.9%;
     max-width: 50%;
   }
 
@@ -1020,7 +1020,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
-    flex: 0 0 75%;
+    flex: 0 0 74.9%;
     max-width: 75%;
   }
 
@@ -1226,7 +1226,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
+    flex: 0 0 24.9%;
     max-width: 25%;
   }
 
@@ -1234,7 +1234,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 33.333333%;
     -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
+    flex: 0 0 33.2%;
     max-width: 33.333333%;
   }
 
@@ -1250,7 +1250,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
+    flex: 0 0 49.9%;
     max-width: 50%;
   }
 
@@ -1274,7 +1274,7 @@
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
-    flex: 0 0 75%;
+    flex: 0 0 74.9%;
     max-width: 75%;
   }
 
